# actividad1-mlops-openrate-equipoJCS

./: .gitignore  README.md  TEAMS.md  main.py  pyproject.toml
.dvc/: config
data/raw/: openrate.csv.dvc
models/: train_logreg_tuning.py  train_mlflow.py  train_random_forest.py
models/mlruns/0/: meta.yaml
models/mlruns/619050207405890066/: meta.yaml
models/mlruns/619050207405890066/1590d4654a6a49b882f7162bb9b76285/: meta.yaml
models/mlruns/619050207405890066/1590d4654a6a49b882f7162bb9b76285/metrics/: accuracy  f1_score  precision  recall  roc_auc
models/mlruns/619050207405890066/16f11a90f33e4fa7baed44c4c4cbe8f6/: meta.yaml
models/mlruns/619050207405890066/4f7484f447424c808d92638c6d4e3887/: meta.yaml
models/mlruns/619050207405890066/632007b3ba034213966d54965e18efcd/: meta.yaml
models/mlruns/619050207405890066/6ed4a0f4fa744377959af38312af620a/: meta.yaml
models/mlruns/619050207405890066/85a160eed8e84d2e97266d6587060375/: meta.yaml
models/mlruns/619050207405890066/95a56300b7be49b7be1204ca130fe84e/: meta.yaml
models/mlruns/619050207405890066/ae946bd8129f4525a970a81cf61bcd49/: meta.yaml
models/mlruns/619050207405890066/cffe7d5acc2e42d283a2bc1bd28621f9/: meta.yaml
models/mlruns/619050207405890066/d8c09c5eeb2b430bb298bb6114c3e981/: meta.yaml
models/mlruns/619050207405890066/e5664b89ce4b44ba9b07e027b856041d/: meta.yaml
models/mlruns/models/notification_open_model/: meta.yaml
output/: metrics_random_forest.csv  model_training_report.md  trainlogreg.csv  trainlogreg.md
src/: generate_openrate_dataset.py
(+147 files in other folders)
