[project]
name = "mlops-p1"
version = "0.1.0"
description = "Proyecto MLOPS USTA"
authors = [
    {name = "Javier Prada Villamizar",email = "javierpradavillamizar@gmail.com"}
]
license = "apache"
requires-python = ">=3.10,<4.0"
dependencies = [
    "dvc (>=3.67.1,<4.0.0)",
    "numpy (<2.0)",
    "pandas (<3.0)",
    "dvc-gdrive (>=3.0.1,<4.0.0)",
    "pyopenssl (>=26.3.0,<27.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "dvc-ssh (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
